--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
+<!DOCTYPE HTML>
+
 <html>
 <head>
+<title>Prueba</title>
+
+
+<script src="css/source-sans-pro.js"></script>
+<link href="css/styles.css" rel="stylesheet">
+<script src="lib/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 
 <script>
 document.addEventListener("deviceready", dispositivoListo,false);
@@ -8,8 +17,6 @@ alert("el dispositivo esta listo para usar la API de phonegap")
 }
 </script>
 
-<script src="css/source-sans-pro.js"></script>
-<link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -24,8 +31,7 @@ alert("hiciste click")
 }
 </script>
 
-<script src="phonegap.js"></script>
-<script src="lib/jquery-1.8.2.min.js"></script>
+
 
 
 </body>
